# Utilities_for_VASP

./: .gitignore  LICENSE.txt  README.md
Bash Scripts/: config_runVASP  runVASP.sh
Bash Scripts/СonvergenceEcutAndKPoints/: calcСonvergenceEcutAndKPoints.sh
Bash Scripts/СonvergenceEcutAndKPoints/SourceFile_K_E/: INCAR  POSCAR
Bash Scripts/СonveyorСalculation_BandStructure/: GetAllOutput.sh  calcBandStructer.sh  getOutputFolder.sh  СonvСalcBS.sh
Bash Scripts/СonveyorСalculation_BandStructure/SourceFile BS/: INCAR.bs  INCAR.dos  INCAR.relax  KPOINTS.bs  KPOINTS.relax  POSCAR
VASP_utility_Cpp/: CMakeLists.txt
VASP_utility_Cpp/VASP_utility_Cpp/: CMakeLists.txt  CreatLibFromFiles.cmake  CreatTestForLib.cmake  main.cpp
VASP_utility_Cpp/VASP_utility_Cpp/_cmake/: CopyFolder.cmake  CreatLibFromFiles.cmake  CreatListSRC.cmake  CreatTestForLib.cmake  copy_folder.cmake  create_lib_from_files.cmake  create_list_path_to_src.cmake  create_paths_list_to.cmake  create_test_for_lib.cmake
VASP_utility_Cpp/VASP_utility_Cpp/_lib/CLI/include/: CalledPanelFunction.h  Command.h  IPanel.h  Panel.h  PanelFactory.h  PanelManger.h  PanelType.h  ToggleFunction.h
VASP_utility_Cpp/VASP_utility_Cpp/_lib/CLI/src/: Command.cpp  Panel.cpp  PanelFactory.cpp  PanelManager.cpp  ShowContentTextFileFunction.cpp  ToggleFunction.cpp
VASP_utility_Cpp/VASP_utility_Cpp/_lib/FileProcessing/include/: EIGENVALFileConvertingHandler.h  FileHandler.h  ShowContentTextFileFunction.h  TextFileHandler.h
VASP_utility_Cpp/VASP_utility_Cpp/_lib/FileProcessing/src/: EIGENVALFileConvertingHandler.cpp  FileHandler.cpp  TextFileHandler.cpp
VASP_utility_Cpp/VASP_utility_Cpp/_lib/StringProcessingUtilits/include/: StringProcessingUtilits.h
VASP_utility_Cpp/VASP_utility_Cpp/_lib/StringProcessingUtilits/src/: StringProcessingUtilits.cpp
VASP_utility_Cpp/VASP_utility_Cpp/_lib/StringProcessingUtilits/test/: UTestSplitStringToVector.cpp  UTestSplitStringToVector.h
VASP_utility_Cpp/VASP_utility_Cpp/_lib/UTest/include/: myUTest.h
VASP_utility_Cpp/VASP_utility_Cpp/_lib/UTest/src/: mainUTest.cpp  myUTest.cpp
VASP_utility_Cpp/VASP_utility_Cpp/exemple/Pb_2Dslab_20L/: DOSCAR  EIGENVAL  INCAR  OSZICAR  _LOGFILE  vasprun.xml
VASP_utility_Cpp/VASP_utility_Cpp/exemple/Pb_2Dslab_20L/DOS_NBANDS_250/: CONTCAR  DOSCAR  EIGENVAL  INCAR  KPOINTS  OSZICAR  OUTCAR  _LOGFILE  vasprun.xml
VASP_utility_Cpp/VASP_utility_Cpp/exemple/Pb_2Dslab_20L/Ek_NBANDS_250/: DOSCAR  EIGENVAL  INCAR  KPOINTS  OSZICAR  OUTCAR  POSCAR  POTCAR  _LOGFILE
VASP_utility_Cpp/VASP_utility_Cpp/src/: main.cpp
